# xr-chaperone

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
resources/: xr-chaperone.desktop
shaders/: chaperone.frag  chaperone.vert
src/: app_state.rs  boundary.rs  config.rs  main.rs  mesh.rs  monado.rs  renderer.rs  ui.rs  ui_canvas.rs  xr_session.rs  xr_thread.rs
